--- a/Manipulate_DOM/style.css
+++ b/Manipulate_DOM/style.css
@@ -1,4 +1,26 @@
-*{
-    background-color: black;
-    color: white;
+body{
+    font-family: "Montserrat", sans-serif;
+}
+.container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: start;
+    margin: 10px 22%;
+}
+.info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+h2{
+    text-decoration: underline;
+    font-weight: normal;
+    margin: 0%;
+}
+h4{
+    text-decoration: underline;
+    font-weight: normal;
+    margin: 1%;
 }
