--- a/EventHandling/style.css
+++ b/EventHandling/style.css
@@ -34,13 +34,13 @@ h4 {
     margin: 2px;
 }
 .btn{
-    margin: 0px 2px 0px 30px;
     border: none;
     color: white;
     background-color: var(--green);
-    font-size: 20px;
-    height: 4.3vh;  
-    width: 10vw;
+    font-size: 1rem;
+    height: 50px;  
+    width: 200px;
+    margin: 2px;
 }
 #userinp{
     background-color: white;
@@ -50,24 +50,29 @@ h4 {
     border: 1px solid var(--green);
     height: 50px;
     width: 35vw;
+    margin: 2px;
+    margin-right: 20px;
 }
 #genResult{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px 22%;
+    margin: 2px 22%;
 }
 #inputArea{
-    margin: 15px 0px;
+    margin: 2px 0px 10px 0px;
 }
 .numBox{
-            padding: 2px;
-            margin: 2px;
-            color: white;
-            font-size: 50px;
-            width: 140px;
-            height: 55px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+    padding: 2px;
+    margin: 2px;
+    color: white;
+    font-size: 50px;
+    width: 140px;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#errorMsg{
+    margin: 2px 28%;
 }
