--- a/EventHandling/styleKeycode.css
+++ b/EventHandling/styleKeycode.css
@@ -3,3 +3,33 @@
     padding: 0px;
     font-family: "Montserrat", sans-serif;
 }
+body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+.container{
+    display: flex;
+    width: 40vw;
+    height: 9vh;
+    font-size: 2.5rem;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 3px 7px 1px grey;
+    font-weight: 550;
+    color: #494747;
+}
+.result{
+    font-weight: 500;
+    font-size: 4.5rem;
+    color: rgb(36, 255, 54);
+    width: 10vw;
+    height: 17vh;
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 1px 1px 5px 0px grey;
+}
