--- a/Solar System/style.css
+++ b/Solar System/style.css
@@ -6,7 +6,7 @@
 .gifAttach{
     position: relative;
     z-index: -10;
-    background-image: url('./stars.gif');
+    background-image: url('./Images/gif/stars.gif');
 }
 .Website_Heading{
     font-size: 3vw;
