--- a/AnimatingCharacters/style.css
+++ b/AnimatingCharacters/style.css
@@ -1,12 +1,7 @@
-/* *{
-    margin: 0%;
-    padding: 0%;
-} */
 #color-text{
     width: 100%;
     height: 98vh;
-    /* margin: 10px; */
-    background-color: black;
+    font-size: 8rem;
     display: flex;
     flex-wrap: wrap;
     word-break: break-all;
