--- a/Form&WorldData/style.css
+++ b/Form&WorldData/style.css
@@ -40,6 +40,9 @@ body{
     margin: 5px auto 20px auto;
 }
 .search-btn{
+    width: 200px;
+    display: inline-flex;
+    justify-content: center;
     border-radius: 50px;
     border: 1px solid rgb(213, 213, 213);
     padding: 12px 40px;
