--- a/Form&WorldData/style.css
+++ b/Form&WorldData/style.css
@@ -74,3 +74,58 @@ body{
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+/* CSS of ChartInfo Starts here */
+.grid-container {
+    display: grid;
+    grid-template-columns: 100px 1000px 200px;
+    /* grid-template-rows: repeat(3, 1fr); */
+    justify-content: center;
+    row-gap: 5px;
+}
+.grid-item {
+    display: flex;
+    align-items: center;
+}
+.grid-item > p {
+    margin-left: 5px;
+}
+.lang-chart {
+    margin-left: 50px;
+}
+progress::-webkit-progress-bar {
+    background-color: rgb(236, 236, 236);
+}
+
+progress::-webkit-progress-value {
+    background-color: #f39548;
+}
+.chart {
+    display: flex;
+    background-color: rgb(236, 236, 236);
+    height: 100%;
+    padding: 25px;
+    margin: 10px;
+    justify-content: center;
+    flex-direction: column;
+}
+.progress {
+    border: rgb(247, 247, 247);
+    border-radius: 20px;
+    width: 100%;
+    height: 40px;
+}
+#toogle-buttons {
+    background-color: white;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+.button-style {
+    background-color: #f39548;
+    color: black;
+    border: 0;
+    border-radius: 3px;
+    margin: 10px;
+    padding: 8px 20px;
+    cursor: pointer;
+}
