--- a/Form&WorldData/Form_Validation_Code/finalFormStyle.css
+++ b/Form&WorldData/Form_Validation_Code/finalFormStyle.css
@@ -1,25 +1,36 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 700;
+*{
+    margin: 0%;
+    padding: 0%;
 }
 .labels{
     margin: 5px 0px;
     width: 400px;
     height: 25px;
     border: 1px solid rgb(157, 157, 157);
-    /* border: 2px solid rgb(44, 226, 44); */
     border-radius: 5px;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: math;
+    font-size: 20px;
+    margin: 30px;
 }
 .button{
     margin: 5px 0px;
-    height: 6vh;
-    width: 11vw;
+    height: 40px;
+    width: 150px;
     background-color: rgb(157, 157, 157);;
-    /* background-color: rgb(44, 226, 44); */
     color: white;
     border: 0;
     border-radius: 5px;
+}
+.flex-col{
+    display: flex;
+    flex-direction: column;
+}
+.warning{
+    color: rgb(255, 153, 0);
+    font-size: 20px;
 }
