--- a/Form&WorldData/Form_Validation_Code/style.css
+++ b/Form&WorldData/Form_Validation_Code/style.css
@@ -4,8 +4,8 @@
 }
 .labels{
     margin: 5px 0px;
-    width: 400px;
-    height: 25px;
+    width: 30vw;
+    height: 40px;
     border: 1px solid rgb(157, 157, 157);
     border-radius: 5px;
 }
@@ -32,5 +32,6 @@
 }
 .warning{
     color: rgb(255, 153, 0);
-    font-size: 20px;
+    font-size: 15px;
+    text-align: center;
 }
